form validation and horizontal scroll bug fix

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -493,6 +493,10 @@ body {
     overflow-y: auto;
 }
 
+.form-management-container {
+    max-width: 98%;
+}
+
 /* Product Form */
 
 .btn-file {
